# arama

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  version.sh
app/: Cargo.toml
app/src/: core.rs  lib.rs  main.rs
app/src/core/: message.rs  settings.rs  subscription.rs  update.rs  view.rs  views.rs
app/src/core/components/: gallery.rs
app/src/core/components/common/: model_loader.rs
app/src/core/components/gallery/: gallery_settings.rs
app/src/core/update/: cache.rs  component.rs  ui.rs
app/src/core/views/: gallery.rs
app/src/core/views/gallery/: message.rs  subscription.rs  update.rs  util.rs  view.rs
crates/ai/: Cargo.toml
crates/ai/src/: config.rs  lib.rs  model.rs  pipeline.rs  pipeline_manager.rs
crates/ai/src/config/: video_similarity_config.rs
crates/ai/src/config/video_similarity_config/: tests.rs
crates/ai/src/engine/infer/: clip.rs
crates/ai/src/model/: model_container.rs  model_manager.rs
crates/ai/src/model/model_container/: clip.rs  wav2vec2.rs  whisper.rs
crates/ai/src/pipeline/: extract.rs
crates/ai/src/pipeline/encode/: audio.rs  image.rs
crates/ai/src/pipeline/extract/: video_extractor.rs
crates/ai/src/pipeline/score/: similarity.rs
crates/ai/src/pipeline_manager/: video_similarity_pipeline.rs
crates/ai/src/store/file/: file_embedding_map.rs
crates/cache/: Cargo.toml
crates/cache/src/: config.rs  consume.rs  core.rs  engine.rs  env.rs  error.rs  identity.rs  lib.rs  produce.rs  store.rs  types.rs  writer.rs
crates/cache/src/config/: cache_config.rs  db_location.rs
crates/cache/src/config/db_location/: tests.rs
crates/cache/src/consume/: cache_consumer.rs
crates/cache/src/core/: codec.rs  engine.rs  extension.rs  image.rs  migrate.rs  payload.rs  reader.rs  schema.rs  store.rs  thumbnail.rs  video.rs  writer.rs
crates/cache/src/core/image/: query.rs
crates/cache/src/core/reader/: api.rs  cache_reader.rs  util.rs
crates/cache/src/core/store/: cache_store.rs  path.rs
crates/cache/src/core/video/: query.rs
crates/cache/src/core/writer/: api.rs  cache_writer.rs
crates/cache/src/engine/: media.rs
crates/cache/src/engine/database/: image.rs
crates/cache/src/env/: cache.rs  path.rs
crates/cache/src/env/cache/: image.rs
crates/cache/src/env/path/: image.rs
crates/cache/src/error/: cache_error.rs
crates/cache/src/identity/: api.rs  file_fingerprint.rs  hash.rs  hash_strategy.rs  mode.rs  mtime.rs  util.rs
crates/cache/src/image/: database.rs  image_cache_manager.rs
crates/cache/src/image/image_cache_manager/: refresh.rs
crates/cache/src/produce/: cache_producer.rs  cache_refresh.rs  refresh.rs
crates/cache/src/reader/: api.rs  cache_reader.rs  util.rs
crates/cache/src/reader/api/: oneshot.rs
crates/cache/src/store/: api.rs  cache_store.rs  cashe_store_config.rs  helper.rs  util.rs
crates/cache/src/store/api/: general.rs  image.rs  video.rs
crates/cache/src/store/helper/: reader.rs  writer.rs
crates/cache/src/store/path/: tests.rs
crates/cache/src/writer/: cache_writer.rs
crates/cache/src/writer/api/: oneshot.rs  read.rs  session.rs  write.rs
crates/cache/tests/: cross.rs  helpers.rs  image.rs  integration_test.rs  integration_tests.rs  video.rs
crates/engine/file-feature-cache/: Cargo.toml
crates/engine/file-feature-cache/src/: core.rs  error.rs  lib.rs  schema.rs
crates/engine/file-feature-cache/src/core/: extension.rs  identity.rs  reader.rs  schema.rs  store.rs  traits.rs  writer.rs
crates/engine/file-feature-cache/tests/: integration_tests.rs
crates/engine/sidecar/: Cargo.toml
crates/engine/sidecar/src/: lib.rs
crates/engine/sidecar/src/media/: video.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: en.rs  ja.rs  lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
crates/ui/layout/: Cargo.toml
crates/ui/layout/src/: aside.rs  footer.rs  header.rs  lib.rs
crates/ui/layout/src/aside/: dir_tree.rs  message.rs  output.rs  update.rs  view.rs
crates/ui/layout/src/footer/: message.rs  thumbnail_size_slider.rs  update.rs  view.rs
crates/ui/layout/src/header/: dir_nav.rs  message.rs  settings_nav.rs  update.rs  view.rs
crates/ui/main/: Cargo.toml
crates/ui/main/src/: lib.rs
crates/ui/main/src/core/: views.rs
crates/ui/widgets/: Cargo.toml
crates/ui/widgets/src/: context_menu.rs  dialog.rs  dir_tree.rs  lib.rs  similarity_badge.rs
crates/ui/widgets/src/context_menu/: message.rs  update.rs  view.rs
crates/ui/widgets/src/dialog/: media_focus.rs  media_focus_dialog.rs  settings.rs  settings_dialog.rs  similar_pairs.rs  similar_pairs_dialog.rs
crates/ui/widgets/src/dir_tree/: file_node.rs  message.rs  update.rs  view.rs
crates/widget/: Cargo.toml
crates/widget/src/: aside.rs  dialog.rs  header.rs  lib.rs
crates/widget/src/aside/: dir_tree.rs  message.rs  update.rs  view.rs
crates/widget/src/dialog/: media_focus.rs  settings.rs  similar_pairs.rs
crates/widget/src/dir_tree/: file_node.rs  message.rs  update.rs
crates/widget/src/footer/: update.rs  view.rs
crates/widget/src/header/: dir_nav.rs  message.rs  model_loader.rs  output.rs  settings.rs  settings_nav.rs  update.rs  view.rs
embedding/: Cargo.toml
embedding/src/: lib.rs
embedding/src/core/model/: clip.rs  model_manager.rs
embedding/src/core/pipeline/: infer.rs
engine/: Cargo.toml
engine/src/: core.rs  lib.rs
env/: Cargo.toml
env/src/: dir.rs  file.rs  file_system.rs  lib.rs  media.rs  similarity.rs
env/src/config/: settings.rs
env/src/config/settings/: cache_lookup_strategy.rs  target_media_type.rs
env/src/file_system/: disk_space.rs
indexer/: Cargo.toml
indexer/src/: cache.rs  lib.rs
indexer/src/cache/: dir.rs  image.rs  image_cache_manager.rs
indexer/src/cache/image/: byte.rs  database.rs  image_cache_manager.rs
widget/: Cargo.toml
widget/src/: dir_tree.rs  directory_tree.rs
widget/src/dir_tree/: message.rs  update.rs
widget/src/dir_tree/file_node/: message.rs  view.rs
widget/src/directory_tree/: file_node.rs  message.rs  update.rs  view.rs
widget/src/directory_tree/file_node/: message.rs  update.rs  view.rs
(+282 files in other folders)
