[workspace]
members = [
    "app",
    "crates/ai",
    "crates/cache",
    "crates/engine/sidecar",
    "crates/ui/layout",
    "crates/ui/main",
    "crates/ui/widgets",
    "env",
    "crates/engine/file-feature-cache", # todo: publish as crate
]
resolver = "3"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
incremental = false

[workspace.dependencies]
arama-env = { path = "env" }

arama-ai = { path = "crates/ai" }
arama-cache = { path = "crates/cache" }
arama-ui-layout = { path = "crates/ui/layout" }
arama-ui-main = { path = "crates/ui/main" }
arama-ui-widgets = { path = "crates/ui/widgets" }

arama-sidecar = { path = "crates/engine/sidecar" }

# todo: publish as crate
file-feature-cache = { path = "crates/engine/file-feature-cache" }

iced = { version = "0.14", features = ["image", "tokio"] }

# general
anyhow = "1"
app-json-settings = "2"
disk-space = "0"
file-handle = { version = "0", features = ["show", "trash"] }
image = "0.25"
libc = "0.2"
lucide-icons = { version = "0", features = ["iced"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
swdir = "0"
thiserror = "2"
tokio = { version = "1.49", default-features = false, features = ["fs", "sync"] }
webbrowser = "1"

# sidecar
# - media processor
ffmpeg-sidecar = { version = "2.4", features = ["named_pipes"] }

# ai
# candle series is defined in sub-crate because virtual manifest doesn't support [target] (os-specific) sections
# - calc
hnsw_rs = "0"
naga = "28"
# - model loader
reqwest = { version = "0.13", default-features = false, features = ["blocking", "multipart", "rustls", "stream"] }
pt2safetensors = "0"

# cache
rusqlite = { version = "0.38", default-features = false, features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# tests
tempfile = "3"
