[workspace]
members = [
    "app",
    "crates/ai",
    "crates/cache",
    "crates/engine/sidecar",
    "crates/ui/layout",
    "crates/ui/main",
    "crates/ui/widgets",
    "env",
]
resolver = "3"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
incremental = false

[workspace.dependencies]
arama-env = { path = "env" }

arama-ai = { path = "crates/ai" }
arama-cache = { path = "crates/cache" }
arama-ui-layout = { path = "crates/ui/layout" }
arama-ui-main = { path = "crates/ui/main" }
arama-ui-widgets = { path = "crates/ui/widgets" }

arama-sidecar = { path = "crates/engine/sidecar" }

iced = { version = "0.14", features = ["image", "tokio"] }
snora = { version = "0.8", default-features = false }

# general
anyhow = "1"
app-json-settings = "2"
disk-space = "0"
file-handle = { version = "0", features = ["open", "show", "trash"] }
image = "0.25"
libc = "0.2"
lucide-icons = { version = "0", features = ["iced"] }
rayon = "1"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swdir = "0"
thiserror = "2"
tokio = { version = "1.49", default-features = false, features = ["fs", "sync"] }
webbrowser = "1"

# sidecar
# - media processor

# ai
# candle series is defined in sub-crate because virtual manifest doesn't support [target] (os-specific) sections
# - calc
hnsw_rs = "0"
naga = "28"
# - model loader
reqwest = { version = "0.13", default-features = false, features = ["blocking", "multipart", "rustls", "stream"] }
pt2safetensors = "0"

# cache
localcache = "0.20"
blake3 = "1"
# rusqlite is used only by the one-time v1 cache migration importer
# (crates/cache/src/core/migrate.rs); pinned to the same major as
# localcache's internal rusqlite to avoid a libsqlite3-sys links conflict.
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }

# tests
tempfile = "3"
