[workspace]
resolver = "3"
members = [
    "app",
    "crates/ai",
    "crates/cache",
    "crates/i18n",
    "crates/theme",
    "crates/engine/sidecar",
    "crates/ui/layout",
    "crates/ui/main",
    "crates/ui/widgets",
    "env",
]

[workspace.package]
version = "0.36.1"
edition         = "2024"
rust-version    = "1.90"
license         = "Apache-2.0"
authors         = ["nabbisen"]
categories      = ["gui"]
keywords        = ["image", "walk", "filter"]
repository      = "https://github.com/nabbisen/arama"

[workspace.dependencies]
arama-ai            = { version = "0.36.1", path = "crates/ai" }
arama-cache         = { version = "0.36.1", path = "crates/cache" }
arama-env           = { version = "0.36.1", path = "env" }
arama-i18n          = { version = "0.36.1", path = "crates/i18n" }
arama-sidecar       = { version = "0.36.1", path = "crates/engine/sidecar" }
arama-theme         = { version = "0.36.1", path = "crates/theme" }
arama-ui-layout     = { version = "0.36.1", path = "crates/ui/layout" }
arama-ui-main       = { version = "0.36.1", path = "crates/ui/main" }
arama-ui-widgets    = { version = "0.36.1", path = "crates/ui/widgets" }

# UI
iced                = { version = "0.14", features = ["image", "tokio"] }
snora               = { version = "0.25", default-features = false, features = ["widgets", "design"] }

app-json-settings   = "2"
disk-space          = "0"
file-handle         = { version = "0", features = ["open", "show", "trash"] }
iced-swdir-tree     = { version = "0.9", features = ["icons"] }
lucide-icons        = { version = "1", features = ["iced"] }
rfd                 = "0.17"
swdir               = "0"
webbrowser          = "1"

# general
anyhow              = "1"
chrono              = { version = "0.4", default-features = false, features = ["clock"] }
image               = "0.25"
libc                = "0.2"
rayon               = "1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
thiserror           = "2"
tokio               = { version = "1.49", default-features = false, features = ["fs", "sync"] }

# ai
# candle series is defined in sub-crate because virtual manifest doesn't support [target] (os-specific) sections
# - calc
hnsw_rs             = "0"
naga                = "27"
# - model loader
reqwest             = { version = "0.13", default-features = false, features = ["blocking", "multipart", "rustls", "stream"] }
pt2safetensors      = "0.1.3"

# cache
localcache          = "0.20"
blake3              = "1"
# rusqlite is used only by the one-time v1 cache migration importer
# (crates/cache/src/core/migrate.rs); pinned to the same major as
# localcache's internal rusqlite to avoid a libsqlite3-sys links conflict.
rusqlite            = { version = "0.40", default-features = false, features = ["bundled"] }

# tests
tempfile        = "3"

[profile.release]           # shrink executable size
opt-level       = "z"
lto             = true
# panic         = "abort"
strip           = true
codegen-units   = 1

[profile.dev]               # to improve productivity
opt-level       = 1         # slightly optimize
lto             = false     # disable link-time optimizations
incremental     = false

