[package]
name = "arama"
version = "0.11.2"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-ui-layout = { workspace = true }
arama-ui-main = { workspace = true }
arama-ui-widgets = { workspace = true }

iced = { workspace = true }

anyhow = { workspace = true }
app-json-settings = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
swdir = { workspace = true }
