[package]
name        = "arama"
description = "Image / video viewer and similarity finder powered by offline AI"
readme      = "../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-i18n = { workspace = true }
arama-theme = { workspace = true }
arama-env = { workspace = true }
arama-ui-layout = { workspace = true }
arama-ui-main = { workspace = true }
arama-ui-widgets = { workspace = true }

iced = { workspace = true }

anyhow = { workspace = true }
app-json-settings = { workspace = true }
file-handle = { workspace = true }
lucide-icons = { workspace = true }
rayon = { workspace = true }
swdir = { workspace = true }
snora = { workspace = true }
