[package]
name = "arama-embedding"
version = "0.8.4"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
arama-env = { path = "../env" }

anyhow = "1"
image = "0"
naga = "28"

# image comparison
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9" # 一般的なモデルの実装が含まれる

# ai model loader
reqwest = { version = "0.13", default-features = false, features = ["multipart", "rustls"] }
tokio = { version = "1.49", default-features = false, features = ["fs"] }
pt2safetensors = "0"
