[package]
name        = "arama-env"
description = "Environment constants, path helpers, and persisted settings for arama"
readme      = "../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
arama-i18n = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
