[package]
name = "arama-indexer"
version = "0.9.0"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
arama-env = { path = "../env" }

anyhow = "1"
image = "0.25"
rayon = "1.11"
rusqlite = { version = "0.38", default-features = false, features = ["bundled"] }
swdir = "0"
tokio = { version = "1.49", default-features = false, features = ["sync"] }
