[package]
name = "arama-ai"
version = "0.11.0"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
arama-env = { workspace = true }

# image comparison
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9" # 一般的なモデルの実装が含まれる

# ai model loader
reqwest = { version = "0.13", default-features = false, features = ["multipart", "rustls"] }
tokio = { workspace = true }
pt2safetensors = "0"

# general
anyhow = { workspace = true }
hnsw_rs = "0"
image = { workspace = true }
naga = "28"
rayon = { workspace = true }
