[package]
name = "arama-ai"
version = "0.14.4"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[features]
default = []

cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda"
]

[dependencies]
arama-cache = { workspace = true }
arama-env = { workspace = true }
arama-sidecar = { workspace = true }

# ai model loader
reqwest = { workspace = true }
tokio = { workspace = true }
pt2safetensors = { workspace = true }

# general
anyhow = { workspace = true }
hnsw_rs = { workspace = true }
image = { workspace = true }
naga = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swdir = { workspace = true }

# huggingface candle serise
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
candle-transformers = { version = "0.9", features = ["metal"] }
