[package]
name = "arama-cache"
version = "0.23.0"
edition = "2024"

[dependencies]
localcache = { workspace = true }

anyhow = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
# Used only by the one-time v1 cache migration importer (core/migrate.rs).
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
