[package]
name        = "arama-cache"
description = "Embedding and thumbnail cache facade over localcache for arama"
readme      = "../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
localcache = { workspace = true }

anyhow = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
# Used only by the one-time v1 cache migration importer (core/migrate.rs).
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
