[package]
name        = "arama-i18n"
description = "Lightweight internationalisation (locale tables and t()) for arama"
readme      = "../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde = { workspace = true }
