[package]
name        = "arama-theme"
description = "Snora Design token-driven styling for arama"
readme      = "../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
arama-env = { workspace = true }
iced = { workspace = true }
snora = { workspace = true }
