[package]
name = "arama-widget"
version = "0.9.2"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
iced = "0.14"
