[package]
name = "arama-widget"
version = "0.10.1"
edition = "2024"

description = "Image viewer and similarity calculator with offline AI power"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/arama"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
arama-embedding = { path = "../embedding" }
arama-indexer = { path = "../indexer" }

iced = "0.14"
swdir = "0"
