[package]
name = "file-feature-cache"
version = "0.15.0"
edition = "2024"

description = "Cache system for file feature and metadata"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["gui"]
keywords = ["image", "walk", "filter"]
repository = "https://github.com/nabbisen/file-feature-cache"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
anyhow = "1"
ffmpeg-sidecar = { version = "2.4", features = ["named_pipes"] }
image = "0.25"
rayon = "1"
r2d2 = "0.8"
r2d2_sqlite = "0.32"
rusqlite = { version = "0.38", default-features = false, features = ["bundled"] }
sha2 = { version = "0.10", default-features = false }
swdir = "0"
thiserror = "2"
tokio = { version = "1.49", default-features = false, features = ["fs", "sync"] }

[dev-dependencies]
rayon = "1"
tempfile = "3"
