[package]
name = "arama-sidecar"
version = "0.32.0"
edition = "2024"

[dependencies]
arama-env = { workspace = true }

anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

# ffmpeg archive extraction
[target.'cfg(target_os = "linux")'.dependencies]
tar = "0.4"
xz2 = "0.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
zip = { version = "4", features = ["deflate"], default-features = false }
