[package]
name        = "arama-ui-layout"
description = "Application shell layout (header, aside, footer) for arama"
readme      = "../../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-env = { workspace = true }
arama-i18n = { workspace = true }
iced-swdir-tree = { workspace = true }
arama-ui-widgets = { workspace = true }

iced = { workspace = true }

lucide-icons = { workspace = true }
rfd = { workspace = true }
swdir = { workspace = true }
