[package]
name = "arama-ui-main"
version = "0.12.5"
edition = "2024"

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-env = { workspace = true }
arama-ui-widgets = { workspace = true }

iced = { workspace = true }

anyhow = { workspace = true }
swdir = { workspace = true }
