[package]
name = "arama-ui-main"
version = "0.19.4"
edition = "2024"

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-env = { workspace = true }
arama-sidecar = { workspace = true }
arama-ui-widgets = { workspace = true }

iced = { workspace = true }

anyhow = { workspace = true }
disk-space = { workspace = true }
reqwest = { workspace = true }
swdir = { workspace = true }
tokio = { workspace = true }
