[package]
name        = "arama-ui-main"
description = "Core views (gallery, setup wizard, cache page) for arama"
readme      = "../../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-i18n = { workspace = true }
arama-theme = { workspace = true }
arama-env = { workspace = true }
chrono = { workspace = true }
lucide-icons = { workspace = true }
arama-sidecar = { workspace = true }
arama-ui-widgets = { workspace = true }

iced = { workspace = true }

anyhow = { workspace = true }
disk-space = { workspace = true }
reqwest = { workspace = true }
swdir = { workspace = true }
tokio = { workspace = true }
