[package]
name = "arama-ui-widgets"
version = "0.19.3"
edition = "2024"

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-env = { workspace = true }
arama-sidecar = { workspace = true }

iced = { workspace = true }

disk-space = { workspace = true }
file-handle = { workspace = true }
lucide-icons = { workspace = true }
rayon = { workspace = true }
swdir = { workspace = true }
webbrowser = { workspace = true }
