[package]
name        = "arama-ui-widgets"
description = "Reusable iced widgets and dialogs for arama"
readme      = "../../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
arama-ai = { workspace = true }
arama-cache = { workspace = true }
arama-i18n = { workspace = true }
arama-theme = { workspace = true }
arama-env = { workspace = true }
arama-sidecar = { workspace = true }

iced = { workspace = true }

disk-space = { workspace = true }
file-handle = { workspace = true }
lucide-icons = { workspace = true }
rayon = { workspace = true }
swdir = { workspace = true }
webbrowser = { workspace = true }
